[package]
name = "oak-d"
description = "High-performance incremental D language parser for the oak ecosystem with flexible configuration, supporting systems programming and native development."
categories = ["parsing"]
keywords = ["parser", "dlang", "systems", "language"]
documentation = "https://docs.rs/oak-d"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true


[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }

[dev-dependencies]
oak-core = { workspace = true, features = ["testing"] }


[features]
default = []
alloc = []

[package.metadata.docs.rs]
all-features = true