[package]
name = "oak-dejavu"
version.workspace = true
authors.workspace = true
description = "Dejavu language parser with support for modern Dejavu syntax and features."
edition.workspace = true
license.workspace = true
readme = "readme.md"
homepage.workspace = true
repository = "https://github.com/ygg-lang/oaks/tree/master/examples/oak-dejavu"
documentation = "https://docs.rs/oak-dejavu"
categories = ["parsing"]
keywords = ["parser", "dejavu", "language"]

[dependencies]
oak-core = { workspace = true, features = ["serde", "testing"] }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }
oak-lsp = { workspace = true, optional = true }
oak-mcp = { workspace = true, optional = true, features = ["io-std"] }
oak-hover = { workspace = true, optional = true }
oak-symbols = { workspace = true }
oak-vfs = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] , optional = true }
tracing = { workspace = true }
unicode-ident = { workspace = true }
tokio = { workspace = true, optional = true, features = ["full"] }

[dev-dependencies]
oak-testing = { workspace = true }
# serde_json = { workspace = true } # replaced by oak-json

[features]
default = ["serde"]
serde = ["dep:serde", "oak-core/serde"]
lsp = ["dep:oak-lsp", "dep:oak-hover", "dep:oak-vfs", "oak-highlight", "oak-pretty-print", "dep:futures"]
mcp = ["lsp", "oak-mcp/io-std"]

[package.metadata.docs.rs]
all-features = true
