[package]
name = "oak-delphi"
description = "Delphi language parser with support for modern Delphi syntax and object-oriented programming features."
categories = ["parsing"]
keywords = ["parser", "delphi", "object-oriented", "pascal"]
documentation = "https://docs.rs/oak-delphi"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true


[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }
serde = { workspace = true }

[dev-dependencies]
oak-core = { workspace = true, features = ["testing"] }


[features]
default = []


[package.metadata.docs.rs]
all-features = true
