[package]
name = "oak-dhall"
description = "Erlang language parser with support for concurrent programming and OTP features."
categories = ["parsing"]
keywords = ["parser", "erlang", "otp", "concurrent"]
documentation = "https://docs.rs/oak-erlang"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }

[dev-dependencies]
oak-core = { workspace = true, features = ["testing"] }


[features]
default = []


[package.metadata.docs.rs]
all-features = true