[package]
name = "oak-dhall"
description = "Dhall language parser with support for functional programming and type system features."
categories = ["parsing"]
keywords = ["parser", "dhall", "functional", "type-safe"]
documentation = "https://docs.rs/oak-dhall"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }
serde = { workspace = true }

[dev-dependencies]
oak-testing = { workspace = true }


[features]
default = []


[package.metadata.docs.rs]
all-features = true
