[package]
name = "oak-django"
description = "Django template parser with support for Django template language and web development."
categories = ["parsing"]
keywords = ["parser", "django", "template", "web"]
documentation = "https://docs.rs/oak-django"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }
serde = { workspace = true }


[dev-dependencies]
oak-core = { workspace = true, features = ["testing"] }


[features]
default = [ "oak-highlight"]


[package.metadata.docs.rs]
all-features = true