[package]
name = "oak-fortran"
description = "Fortran scientific computing language parser with support for modern Fortran standards and numerical computing."
categories = ["parsing"]
keywords = ["parser", "fortran", "scientific-computing", "hpc"]
documentation = "https://docs.rs/oak-fortran"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }
serde = { workspace = true }

[dev-dependencies]
oak-core = { workspace = true, features = ["testing"] }
walkdir = { workspace = true }

[features]
default = []


[package.metadata.docs.rs]
all-features = true
