[package]
name = "oak-go"
description = "High-performance incremental Go parser for the oak ecosystem with flexible configuration, supporting concurrent programming and cloud-native development."
categories = ["parsing"]
keywords = ["parser", "go", "golang", "syntax-analysis"]
documentation = "https://docs.rs/oak-go"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true }
oak-pretty-print = { workspace = true }
oak-lsp = { workspace = true }
oak-hover = { workspace = true }
oak-vfs = { workspace = true }
oak-mcp = { workspace = true, features = ["io-std"] }
serde = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
oak-testing = { workspace = true }

[features]
default = []
semantic-search = []


[package.metadata.docs.rs]
all-features = true
