[package]
name = "oak-graphql"
description = "High-performance incremental Go parser for the oak ecosystem with flexible configuration, supporting concurrent programming and cloud-native development."
categories = ["parsing"]
keywords = ["parser", "go", "golang", "syntax-analysis"]
documentation = "https://docs.rs/oak-go"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }

[dev-dependencies]
oak-core = { workspace = true, features = ["testing"] }


[features]
default = []
alloc = []

[package.metadata.docs.rs]
all-features = true