[package]
name = "oak-graphql"
description = "GraphQL query language parser with support for modern GraphQL specifications and schema definitions."
categories = ["parsing"]
keywords = ["parser", "graphql", "query-language", "api"]
documentation = "https://docs.rs/oak-graphql"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }

[dev-dependencies]
oak-core = { workspace = true, features = ["testing"] }


[features]
default = []


[package.metadata.docs.rs]
all-features = true
