[package]
name = "oak-gsgl"
description = "GSGL language parser with support for modern GSGL syntax and features."
categories = ["parsing"]
keywords = ["parser", "gsgl", "language", "syntax"]
documentation = "https://docs.rs/oak-gsgl"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }
serde = { workspace = true }

[dev-dependencies]
oak-core = { workspace = true, features = ["testing"] }


[features]
default = []


[package.metadata.docs.rs]
all-features = true
