[package]
name = "oak-haskell"
description = "High-performance incremental Haskell parser for the oak ecosystem with flexible configuration, supporting pure functional programming and advanced type systems."
categories = ["parsing"]
keywords = ["parser", "haskell", "ast", "language"]
documentation = "https://docs.rs/oak-haskell"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }

[dev-dependencies]
oak-core = { workspace = true, features = ["testing"] }

walkdir = "2.5"

[features]
default = []
alloc = []

[package.metadata.docs.rs]
all-features = true