[package]
name = "oak-haskell"
description = "Haskell functional programming language parser with support for pure functional programming and advanced type systems."
categories = ["parsing"]
keywords = ["parser", "haskell", "ast", "language"]
documentation = "https://docs.rs/oak-haskell"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true }
oak-pretty-print = { workspace = true }
oak-lsp = { workspace = true }
oak-mcp = { workspace = true }
oak-hover = { workspace = true }
oak-vfs = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
default = []

[dev-dependencies]
oak-testing = { workspace = true }
walkdir = { workspace = true }


[package.metadata.docs.rs]
all-features = true
