[package]
name = "oak-html"
description = "High-performance incremental HTML parser for the oak ecosystem with flexible configuration, optimized for web content and document structure processing."
categories = ["parsing"]
keywords = ["parser", "html", "web", "markup"]
documentation = "https://docs.rs/oak-html"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }
serde = { workspace = true }

[lib]
path = "src/lib.rs"

[dev-dependencies]
oak-core = { workspace = true, features = ["testing"] }


[features]
default = []


[package.metadata.docs.rs]
all-features = true