[package]
name = "oak-html"
description = "HTML markup language parser with support for web content and document structure processing."
categories = ["parsing"]
keywords = ["parser", "html", "web", "markup"]
documentation = "https://docs.rs/oak-html"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true }
oak-pretty-print = { workspace = true }
oak-lsp = { workspace = true }
oak-mcp = { workspace = true }
oak-hover = { workspace = true }
oak-vfs = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"

[dev-dependencies]
oak-testing = { workspace = true }

[features]
default = ["mcp-stdio"]
lsp = ["dep:tokio"]
mcp-stdio = ["oak-mcp/io-std", "dep:tokio"]


[package.metadata.docs.rs]
all-features = true
