[package]
name = "oak-ini"
description = "High-performance incremental INI parser for the oak ecosystem with flexible configuration, optimized for simple configuration file processing."
categories = ["parsing"]
keywords = ["parser", "ini", "streaming", "validation"]
documentation = "https://docs.rs/oak-ini"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true }
oak-pretty-print = { workspace = true }
oak-lsp = { workspace = true }
oak-mcp = { workspace = true, optional = true }
oak-hover = { workspace = true }
oak-vfs = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
oak-core = { workspace = true, features = ["testing"] }

[features]
default = []
mcp = ["dep:oak-mcp"]
axum = ["mcp", "dep:tokio", "dep:axum", "oak-mcp/axum", "oak-lsp/axum"]


[package.metadata.docs.rs]
all-features = true
